<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleFingerPaint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shapes_">Shapes:</string>
	<string name="Save">Save</string>
	<string name="Reset">Reset</string>
	<string name="Email">Email</string>	
	<string name="Exit">Exit</string>
</resources>
